<resources>
    <string name="app_name">Not a calendar</string>

    <!-- Common -->
    <string name="accept">Aceptar</string>


    <!-- Main activity -->
    <string name="MainAct_Configuration">Configuración</string>
    <string name="MainAct_Calendar">Calendario</string>

    <!-- Month activity -->
    <string name="MonthAct_Previous">Anterior</string>
    <string name="MonthAct_Next">Siguiente</string>

    <!-- Exam and holiday CRUD dialogs -->
    <string name="DialogsCRUD_Date">Fecha:</string>
    <string name="DialogsCRUD_Name">Nombre:</string>
    <string name="DialogsCRUD_Day">Día</string>
    <string name="DialogsCRUD_Month">Mes</string>
    <string name="DialogsCRUD_Year">Año</string>

    <string name="DialogsCRUD_Start">Inicio</string>
    <string name="DialogsCRUD_End">Fin</string>

    <string name="DialogsCRUD_ProgrammedExamList">Exámenes fechados:</string>


    <!-- Configuration activity -->
    <string name="ConfigAct_Change_colors_button">Cambiar paleta de colores</string>

    <!-- Config color activity -->
    <string name="ConfColorAct_Table_palette_title">Colores predefinidos:</string>
    <string name="ConfColorAct_Change_basic_color">Cambiar color base</string>
    <string name="ConfColorAct_Change_exam_color">Cambiar color exmámenes</string>
    <string name="ConfColorAct_Change_holiday_color">Cambiar color vacaciones</string>
</resources>
