<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingStart="55dp"
    android:paddingEnd="55dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DialogsCRUD_Date" />

    <TextView
        android:id="@+id/AddExamDia_DateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DialogsCRUD_Name" />

    <EditText
        android:id="@+id/AddExamDia_NameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
<!--
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DialogsCRUD_Day" />

    <EditText
        android:id="@+id/textAddExamDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DialogsCRUD_Month" />

    <EditText
        android:id="@+id/textAddExamMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DialogsCRUD_Year" />

    <EditText
        android:id="@+id/textAddExamYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />
-->


    <Button
        android:id="@+id/AddExamDia_AcceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:text="@string/accept" />

</LinearLayout>