<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <view
        class="com.example.examcalendar.HelpClasses.SwipeSidesRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DelHolAct_TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Borrar vacaciones"
                android:textSize="24dp" />

            <!-- Moved from below examButtonsLayout to below MonthInfoLayout-->
            <LinearLayout
                android:id="@+id/DelHolAct_InfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/DelHolAct_PrevMonthButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/MonthAct_Previous" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/DelHolAct_MonthTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/DelHolAct_YearTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <Button
                    android:id="@+id/DelHolAct_NextMonthButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/MonthAct_Next" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/DelHolAct_CalendarLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/MonthAct_InfoLayout"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/DelHolAct_DayNamesGridLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewMonday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="L" />

                        <TextView
                            android:id="@+id/textViewTuesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="M" />

                        <TextView
                            android:id="@+id/textViewWednesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="X" />

                        <TextView
                            android:id="@+id/textViewThursday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="J" />

                        <TextView
                            android:id="@+id/textViewFriday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="V" />
                    </LinearLayout>


                    <view
                        android:id="@+id/DelHolAct_DaysAutoGridView"
                        class="com.example.examcalendar.HelpClasses.AutoGridView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:numColumns="@integer/columnsOnDayGrid"
                        android:stretchMode="columnWidth" />
                </LinearLayout>

                <Button
                    android:id="@+id/DelHolAct_AcceptButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept" />
            </LinearLayout>
        </LinearLayout>
    </view>

</RelativeLayout>
